# Super-Asciivision

./: .gitignore  LAUNCH_AUDIT_PROMPT.md  LICENSE  README.md  build-asciivision.sh  index.html  install-linux.sh  install.sh  package-lock.json  package.json  render.yaml  tasks.md  tsconfig.json  uninstall.sh  vite.config.ts
asciivision-core/: Cargo.toml  README.md
asciivision-core/src/: ai.rs  analytics.rs  client.rs  effects.rs  games.rs  main.rs  server.rs  sysmon.rs  tiles.rs  tiling.rs  video.rs
docs/: handoff-asciivision-integration.md  handoff-v10.md  handoff-v11.md  handoff-v12.md  handoff-v13.md  handoff-v14.md  handoff-v15.md  handoff-v16.md  handoff-v17.md  handoff-v18.md  handoff-v19.md  handoff-v2.md  handoff-v3.md  handoff-v4.md  handoff-v5.md  handoff-v6.md  handoff-v7.md  handoff-v8.md  handoff-v9.md  handoff.md  index.php  new-tasks.md  review32426.md  tasks.md  tasks3926.md
hands-relay/: README.md  package-lock.json  package.json
hands-relay/src/: server.js
src/: App.test.tsx  App.tsx  constants.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  db.rs  editor.rs  error.rs  hands.rs  hooks.rs  keychain.rs  lib.rs  main.rs  permissions.rs  prompts.rs  providers.rs  realtime_proxy.rs  sub_agent.rs  terminal.rs  tools.rs  types.rs  window.rs  workflows.rs  workspace.rs
src/components/: AgentProgressPanel.tsx  AgentToolCard.tsx  AppMark.tsx  BrowserPanel.tsx  CodeBlock.tsx  EmptyPanel.tsx  ErrorBoundary.tsx  MessageBubble.tsx  NavTab.tsx  ReasoningPanel.tsx  ResizeHandle.tsx  ShellChromeContext.ts  ToolCallBlock.tsx  TypingIndicator.tsx
src/hooks/: useDragResize.ts
src/lib/: tauri.ts
src/pages/: ChatPage.tsx  EditorPage.tsx  HandsPage.tsx  IdePage.tsx  ImaginePage.tsx  MusicPage.tsx  TilesPage.tsx  VoiceAudioPage.tsx  pages.test.tsx
src/store/: appStore.ts  chatStore.test.ts  chatStore.ts  handsStore.ts  mediaStore.ts  (+6 more)
(+33 files in other folders)
